--- a/index.html
+++ b/index.html
@@ -9,50 +9,56 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
+        <div id="main-body">
+            <div class="row">
             <div class="col-md-6">
                 <div class="pin-generator half-width">
-                    <input class="form-control" type="text">
-                    <button class="generate-btn">Generate Pin</button>
+                    <input id="generate-pin-display" class="form-control" type="text">
+                    <button id="pin-generate" class="generate-btn">Generate Pin</button>
                 </div>
             </div>
             <div class="col-md-6">
                 <div class="input-section half-width">
-                    <input class="form-control" type="text">
+                    <input id="input-display" class="form-control" type="text">
                     <div class="numbers">
                         <div class="calc-body">
                             <div class="calc-button-row">
-                              <div class="button">7</div>
-                              <div class="button">8</div>
-                              <div class="button">9</div>
+                              <div onclick="btnValue('7')" class="button">7</div>
+                              <div onclick="btnValue('8')" class="button">8</div>
+                              <div onclick="btnValue('9')" class="button">9</div>
                             </div>
                             <div class="calc-button-row">
-                              <div class="button">4</div>
-                              <div class="button">5</div>
-                              <div class="button">6</div>
+                              <div onclick="btnValue('4')" class="button">4</div>
+                              <div onclick="btnValue('5')" class="button">5</div>
+                              <div onclick="btnValue('6')" class="button">6</div>
                             </div>
                             <div class="calc-button-row">
-                              <div class="button">1</div>
-                              <div class="button">2</div>
-                              <div class="button">3</div>
+                              <div onclick="btnValue('1')" class="button">1</div>
+                              <div onclick="btnValue('2')" class="button">2</div>
+                              <div onclick="btnValue('3')" class="button">3</div>
                             </div>
                             <div class="calc-button-row">
-                                <div class="button"><</div>
-                                <div class="button">0</div>
-                                <div class="button">C</div>
+                                <div onclick="btnValue('<')" class="button"><</div>
+                                <div onclick="btnValue('0')" class="button">0</div>
+                                <div onclick="btnValue('c')" class="button">C</div>
                             </div>
                             <div>
-                                <button type="submit" class="submit-btn">Submit</button>
-                                <p class="action-left">3 try left</p>
+                                <button id="submit-button" type="submit" class="submit-btn">Submit</button>
+                                <p class="action-left"><span id="try-left">3</span> try left</p>
                             </div>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-        <div class="notify-section">
-            <p class="notify">❌ Pin Didn't Match, Please try again</p>
-            <p class="notify">✅ Pin Matched... Secret door is opening for you</p>
-        </div>
     </div>
+</div>
+    <div class="notify-section">
+        <p id="miss-matched" class="notify">❌ Pin Didn't Match, Please try again</p>
+        <p id="pin-matched" class="notify">✅ Pin Matched... Secret door is opening for you</p>
+        <p id="sorry-msg" class="notify">😞 Sorry You don't have any chance left !</p>
+    </div>
+</div>
+    <script src="script.js"></script>
 </body>
 </html>
